--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -17,7 +17,7 @@ body,
 }
 
 #root {
-   @apply h-full flex flex-col justify-center items-center bg-slate-900;
+   @apply h-full flex flex-col justify-center items-center bg-NavyBlue;
 }
 
 .input-placeholder::placeholder {
